--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
             </p>
 
             <div class="download-section">
-                <a href="LiveKitaab-Launcher.exe" class="download-btn" download>
+                <a href="https://github.com/achatterjee4561-cyber/livekitaab-app/releases/download/v1.0/LiveKitaab-Launcher.exe" class="download-btn" class="download-btn" download>
                     <span class="download-icon">⬇</span>
                     Download LiveKitaab Launcher
                 </a>
-                <p class="file-info">Windows • Version 1.0 • 45MB</p>
+                <p class="file-info">Windows • Version 1.0 • 45.9MB</p>
             </div>
         </div>
     </section>
