--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </p>
 
             <div class="download-section">
-                <a href="https://github.com/achatterjee4561-cyber/livekitaab-app/releases/download/v1.0/LiveKitaab-Launcher.exe" class="download-btn" class="download-btn" download>
+                <a href="https://github.com/achatterjee4561-cyber/LiveKitaab.github.io/releases/download/v1.0/LiveKitaab-Launcher.exe" class="download-btn" class="download-btn" download>
                     <span class="download-icon">⬇</span>
                     Download LiveKitaab Launcher
                 </a>
@@ -485,3 +485,4 @@
     </script>
 </body>
 </html>
+
