--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </p>
 
             <div class="download-section">
-                <a href="https://github.com/achatterjee4561-cyber/LiveKitaab.github.io/releases/download/Launcher/LiveKitaab-Launcher.exe" class="download-btn" class="download-btn" download>
+                <a href="https://github.com/livekitaab/livekitaab.github.io/releases/download/Launcher/Library.rar" class="download-btn" class="download-btn" download>
                     <span class="download-icon">⬇</span>
                     Download LiveKitaab Launcher
                 </a>
@@ -485,5 +485,6 @@
     </script>
 </body>
 </html>
+
 
 
