--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="download-section">
                 <a href="https://github.com/livekitaab/livekitaab.github.io/releases/download/Launcher/Library.rar" class="download-btn" class="download-btn" download>
                     <span class="download-icon">⬇</span>
-                    Download LiveKitaab Launcher
+                    Download LiveKitaab Library
                 </a>
                 <p class="file-info">Windows • Version 1.0 • 45.9MB</p>
             </div>
@@ -485,6 +485,7 @@
     </script>
 </body>
 </html>
+
 
 
 
