--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <section class="preview-section">
         <h2>See It In Action</h2>
         <div class="preview-image">
-            <img src="placeholder-screenshot.png" alt="LiveKitaab Preview - Replace this with your actual screenshot">
+            <img src="https://github.com/livekitaab/livekitaab.github.io/blob/main/Proof%20of%20Concept%202.gif" alt="LiveKitaab Preview - Replace this with your actual screenshot">
         </div>
     </section>
 
@@ -485,6 +485,7 @@
     </script>
 </body>
 </html>
+
 
 
 
