--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
             </p>
 
             <div class="download-section">
-                <a href="https://github.com/livekitaab/livekitaab.github.io/releases/download/Launcher/Library.rar" class="download-btn" class="download-btn" download>
+                <a href="https://github.com/livekitaab/livekitaab.github.io/releases/download/Launcher/Library.rar" class="download-btn" download>
                     <span class="download-icon">⬇</span>
-                    Download LiveKitaab Library
+                    Download LiveKitaab Launcher
                 </a>
                 <p class="file-info">Windows • Version 1.0 • 45.9MB</p>
             </div>
@@ -430,7 +430,7 @@
     <section class="preview-section">
         <h2>See It In Action</h2>
         <div class="preview-image">
-            <img src="https://github.com/livekitaab/livekitaab.github.io/blob/main/Proof%20of%20Concept%202.gif" alt="LiveKitaab Preview - Replace this with your actual screenshot">
+            <img src="https://github.com/livekitaab/livekitaab.github.io/blob/main/Proof%20of%20Concept%202.gif" alt="LiveKitaab Preview - Animated demonstration of the app">
         </div>
     </section>
 
@@ -485,8 +485,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
