--- a/index.html
+++ b/index.html
@@ -440,14 +440,12 @@
         <div class="contact-info">
             <p>Have questions or feedback? We'd love to hear from you!</p>
             <p style="margin-top: 20px;">
-                <strong>Email:</strong> <a href="mailto:support@livekitaab.com">support@livekitaab.com</a><br>
-                <strong>Support:</strong> <a href="mailto:help@livekitaab.com">help@livekitaab.com</a>
+                <strong>Email:</strong> <a href="mailto:acjee2059@gmail.com">acjee2059@gmail.com</a><br>
+                <strong>Support:</strong> <a href="mailto:acjee2059@gmail.com">acjee2059@gmail.com</a>
             </p>
             <div class="social-links">
-                <a href="#" class="social-btn" title="Twitter">𝕏</a>
                 <a href="#" class="social-btn" title="Facebook">f</a>
                 <a href="#" class="social-btn" title="Instagram">📷</a>
-                <a href="#" class="social-btn" title="Discord">💬</a>
             </div>
         </div>
     </section>
@@ -485,4 +483,5 @@
     </script>
 </body>
 </html>
+
 
