--- a/Main.html
+++ b/Main.html
@@ -563,7 +563,7 @@ async function verifyPurchase() {
 // ── Open reader ───────────────────────────────────────────────
 function openReader(book) {
   sessionStorage.setItem('pending_book', JSON.stringify(book));
-  window.location.href = 'reader.html';
+  window.location.href = 'Reader.html';
 }
 
 // ── Modal helpers ─────────────────────────────────────────────
