--- a/Account.html
+++ b/Account.html
@@ -280,11 +280,11 @@
 
   <!-- Top nav -->
   <nav class="topnav">
-    <a class="topnav-brand" href="#" data-page="library.html">✦ The Shelf</a>
+    <a class="topnav-brand" href="#" data-page="Main.html">✦ The Shelf</a>
     <div class="topnav-links">
-      <a href="#" data-page="library.html">Library</a>
-      <a href="#" data-page="reader.html">Reader</a>
-      <a class="active" href="#" data-page="account.html">Account</a>
+      <a href="#" data-page="Main.html">Library</a>
+      <a href="#" data-page="Reader.html">Reader</a>
+      <a class="active" href="#" data-page="Account.html">Account</a>
     </div>
   </nav>
 
